tests/fail/os_windows/ch_stable/no_from_str.stderr
error[E0277]: the trait bound `Test: FromStr` is not satisfied
   --> $DIR/no_from_str.rs:8:32
    |
8   |     sscanf::scanf!("hi", "{}", bob::Test);
    |                                ^^^^^^^^^ the trait `FromStr` is not implemented for `Test`
    |
note: required by `from_str`
   --> $DIR/traits.rs:554:5
    |
554 |     fn from_str(s: &str) -> Result<Self, Self::Err>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
